Tue Jun 28 23:46:08 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/tracer.rb: count only non-internal libraries in stack trace,
	  ignoring custom_require. 

Tue Jun 28 21:44:58 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: recognize '\char' in ruby statement.

Tue Jun 28 20:39:29 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/debug.rb (var_list): Command 'var *' did not work on 1.9(!).
	  global_variables, local_variables, and instance_variables returns
	  Symbols from 1.9 and need to stringify before evaling it.
	  See #4931.

Tue Jun 28 19:23:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c: Now, USE_TRAP_SIGMASK depend on HAVE_PTHREAD_SIGMASK.
	  The code have already depended on pthread_sigmask since r27464.

Tue Jun 28 15:09:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/benchmark.rb: merge eregon/benchmark.
	  https://github.com/eregon/ruby/tree/benchmark
	  patched by Benoit Daloze. [ruby-core:37593] [Bug #4940]

	* lib/benchmark (Benchmark#bmbm): bmbm should be consistent with bm
	  for the return value.

	* test/benchmark: remove preemptive test instead of skipping
	  I removed the preemptive test I wrote for Feature #4197.
	  I'll add it back when the implementation will be able to satisfy it.

	* lib/benchmark (Benchmark#bmbm): remove useless explicit call,
	  #format is an alias of #to_s test/benchmark: add a test for
	  format of long time.

	* lib/benchmark: fix label width: always add 1 to ensure there is a
	  space delimiter even with times over 100s
	  When I asked for Feature #4197, I wanted to make delimiting spaces
	  consistent for #bm and #bmbm.
	  But with times over 100s, the output contains no space between the
	  label and the first time (user).
	  Now both ensure there is always a space, even if that means 3 spaces
	  with times under 10s (because it is formatted as %10.6f)

	* test/benchmark: let labels be a constant